# VehicleControlUnit

./: .cproject  .gitignore  .mxproject  DebuggerGUI.py  STM32CUBEIDE_PREBUILDSTEP.bash  VehicleControlUnit.ioc
Core/Inc/: stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Inc/Backup/: main.h.bak  stm32f7xx_hal_conf.h.bak
Core/Inc/Outputs/: DigitalOutput.h
Core/Inc/Scheduler/: Scheduler.h
Core/Inc/Sensors/AnalogSensors/: App.h  BrakePressure.h  SteeringColumn.h
Core/Inc/Utils/: Constants.h  MessageFormat.h  Telemetry.h  Units.h  Updateable.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Core/Src/Backup/: main.c.bak  stm32f7xx_hal_msp.c.bak  stm32f7xx_it.c.bak
Core/Src/Outputs/: AnalogOutput.c  DigitalOutput.c
Core/Src/Scheduler/: Scheduler.c
Core/Src/Sensors/: AnalogSensor.c  Sensor.c
Core/Src/Systems/: ControllerSystem.c  ExternalSystem.c
Core/Src/Utils/: MessageFormat.c  Telemetry.c  Units.c  Updateable.c
Core/Tests/: main.c
Core/Tests/Scheduler/: VCUTest.c.FIXME
Core/Tests/Simulations/: CMakeLists.txt  README.md  UserGuide.md  buffer_monitor.c  buffer_monitor.h  can_simulation.h  config.yaml  control_example.c  integration_test.c  io_simulation.c  io_simulation.h  io_simulation_test.c  sim_config.c  sim_config.h  sim_config_test.c  sim_control.c  sim_control.h  simulation.c
Core/Tests/Test/: test.c
Telem/: connection_manager.py  gui_main.py  main.py  message_parser.py  old_main.py
Telem/gui/: __init__.py  can_view.py  dbc_parser.py  main_window.py  output_view.py  plot_view.py  raw_view.py  sensor_view.py  tree_utils.py
(+20 files in other folders)
